--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -819,7 +819,7 @@
             letter-spacing: 2px;
 
         }
-        
+
         .chapt-icon {
             position: absolute;
             display: block;
@@ -1416,7 +1416,7 @@
 .action-icon {
     position: fixed;
     display: block;
-    width: 7%;
+    width: 6%;
     cursor: pointer;
     bottom: 20px;
     right: 17px;
@@ -1911,6 +1911,7 @@
             color: #ffffff;
             letter-spacing: 0.20em;
             padding: 0 10px;
+            opacity: 0;
         }
 
         .chapt-icon {
