--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -2653,6 +2653,7 @@ ul.product-tags li a {
 
     .apl-count .apl-num {
         height: 203px;
+        margin-left: 0px;
     }
 
     #work-sction .pr-list .pr-thum .teg {
