--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -2616,6 +2616,10 @@ ul.product-tags li a {
         padding: 10px 0px 80px 0px;
     }
 
+    .site-navigation.fullscreen .menu.main-menu>li.menu-item a {
+        color: #fff;
+    }
+
     .site-navigation.fullscreen {
         position: fixed;
         width: 100%;
