--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1782,6 +1782,7 @@ section.horizontal .animation-wrap.to-left {
       letter-spacing: 1px;
       text-transform: uppercase;
       font-family: 'NeueHaasDisplay-me';
+
     }
 
     .approach-lis {
@@ -1807,6 +1808,8 @@ section.horizontal .animation-wrap.to-left {
           overflow: visible;
 
           h6 {
+
+
             .numb {
               font-size: 9em;
               font-family: 'NeueHaasDisplay-me';
@@ -1824,6 +1827,10 @@ section.horizontal .animation-wrap.to-left {
         .ap-prah {
           padding-right: 10%;
 
+          h6 {
+            overflow: hidden;
+          }
+
           .cons {
             font-size: 1.1em;
             /* position: absolute; */
@@ -1832,6 +1839,7 @@ section.horizontal .animation-wrap.to-left {
             color: #2b2b2b;
             text-transform: uppercase;
             margin-bottom: 9px;
+
           }
         }
 
@@ -2229,6 +2237,10 @@ section.horizontal .animation-wrap.to-left {
 
   }
 
+  .last {
+    padding: 0% 3.3%;
+  }
+
   .get-in .flex-con .right::after {
     content: '';
     background: url(/assets/resources/img/Service-elements/phone-icon.svg);
@@ -2261,7 +2273,7 @@ section.horizontal .animation-wrap.to-left {
 
   .service-points .container .point li {
     width: 100%;
-    font-size: 1.4em;
+    font-size: 1.2em;
     font-family: 'Ageo';
     color: #444444;
     line-height: 1.7;
@@ -2283,7 +2295,7 @@ section.horizontal .animation-wrap.to-left {
 
   .last .gr-b {
     text-align: center;
-    font-size: 2.1em;
+    font-size: 1.5em;
   }
 
   .service-points .container p {
