--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -248,7 +248,7 @@
         text-align: right;
         font-size: 2em;
         text-transform: uppercase;
-        padding-left: 42.1%;
+        padding-left: 51%;
         letter-spacing: 2px;
     }
 }
@@ -996,6 +996,10 @@
 @media screen and (max-width:767px) {
     .mob {
         display: none;
+    }
+
+    .w-hde {
+        display: block;
     }
 
     .contact-form-block .contact-inner {
