--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2343,7 +2343,7 @@
 
 #project>div>div>div ul li,
 #project {
-    color: var(--avana);
+    color: #fff;
     font-size: calc(18px + 10 * ((100vw - 320px) / 1920));
     line-height: calc(28px + 10 * ((100vw - 320px) / 1920));
     margin-top: 0px;
@@ -2352,12 +2352,12 @@
 #project>div>div>div ul li h3,
 .link_w h3 {
     text-transform: uppercase;
-    color: var(--avana);
+    color: #fff;
     font-size: 18px;
     margin-bottom: 10px !important;
     margin: 0px;
     letter-spacing: 3px;
-    font-family: 'NeueHaasDisplay-me';
+    font-family: 'Ageo-Semibold';
 }
 
 #abt {
@@ -2394,16 +2394,16 @@
     margin-top: 0px;
 }
 
-#project>div>div>div .grdi2 li h3,
-.link_w h3 {
-    text-transform: uppercase;
-    color: var(--avana);
-    font-size: 18px;
-    margin-bottom: 10px !important;
-    margin: 0px;
-    letter-spacing: 2px;
-    font-family: 'NeueHaasDisplay-me';
-}
+// #project>div>div>div .grdi2 li h3,
+// .link_w h3 {
+//     text-transform: uppercase;
+//     color: ;
+//     font-size: 18px;
+//     margin-bottom: 10px !important;
+//     margin: 0px;
+//     letter-spacing: 2px;
+//     font-family: 'NeueHaasDisplay-me';
+// }
 
 .points ul {
     margin-top: 7%;
@@ -3048,6 +3048,7 @@
                         margin-bottom: 10px;
                         letter-spacing: 1px;
                         overflow: hidden;
+                        font-family: 'Ageo-SemiBold';
                     }
 
                     p {
@@ -3154,8 +3155,8 @@
 }
 
 #colorc h2 {
-    font-size: calc(30px + 350 * ((75vw - 417px) / 1920));
-    line-height: calc(-110px + 350 * ((100vw - 320px) / 1920));
+    font-size: calc(75px + 350 * ((75vw - 417px) / 1920));
+    line-height: calc(-141px + 396 * ((100vw - 320px) / 1920));
     color: #bbb;
     width: 100%;
     text-align: left;
@@ -3164,7 +3165,7 @@
     margin: 0px;
     bottom: 0;
     top: 60px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     mix-blend-mode: multiply;
 
     .reds {
@@ -3245,7 +3246,7 @@
     padding: 30px;
     width: 10vw;
     position: absolute;
-    height: 15vh;
+    height: 18vh;
     /* z-index: 12; */
     border-radius: 90px;
     right: 0;
@@ -3291,6 +3292,15 @@
         display: block;
         overflow: hidden;
     }
+}
+
+.m-p {
+    padding: 10% 0;
+    margin-top: 20%;
+}
+
+.m-b-10 {
+    margin-bottom: 10%;
 }
 
 /*####### next #######*/
@@ -4799,5 +4809,57 @@
     .blocco div.right_block,
     .blocco div.left_block {
         margin-bottom: 55px;
+    }
+
+    .cer {
+        padding: 0 8%;
+        margin-top: 10%;
+
+        .hdn h2 {
+            font-size: 3em;
+        }
+
+        .flex-con {
+            flex-wrap: wrap;
+
+            .listi {
+                width: 100%;
+            }
+
+            .f-left {
+                width: 100%;
+            }
+        }
+    }
+
+    .patra .module--header__image {
+        align-items: center;
+        justify-content: center;
+
+        .hro-img {
+            position: relative;
+            top: 0;
+            height: 450px;
+        }
+    }
+
+    #colorc {
+        h2 {
+            position: relative;
+            line-height: 0.9;
+        }
+    }
+
+    .dmtca {
+        .module--header__image {
+            align-items: center;
+            justify-content: center;
+
+            .hro-img {
+                position: relative;
+                top: 0;
+                height: 800px;
+            }
+        }
     }
 }
