--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3441,6 +3441,15 @@
     background-repeat: no-repeat;
 }
 
+// kedarkala
+#marquee.keda>div {
+    height: 100%;
+}
+
+.p-10 {
+    padding: 10%;
+}
+
 //   media
 @media screen and (max-width:1920px) {
 
