--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3279,6 +3279,11 @@
         margin-bottom: 7%;
     }
 
+    video {
+
+        margin-bottom: 7%;
+    }
+
     .img-right {
         margin-left: 30%;
         display: block;
