--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -4876,4 +4876,21 @@
             }
         }
     }
+
+    .fixed-section {
+        padding: 10px 0 30px;
+
+        .d-flex {
+            display: block;
+        }
+
+        .text-inner .text-content {
+            width: 100%;
+            transform: none !important;
+        }
+
+        .fixed-image {
+            width: 100%;
+        }
+    }
 }
