--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -980,7 +980,11 @@
 .mob {
     display: none;
 }
-
+@media screen and (max-width:1920px){
+    .lets .flex-row h1{
+        font-size: 11em;   
+    }
+}
 @media screen and (max-width:1440px) {
     .lets .flex-row P {
         text-align: right;
@@ -1798,7 +1802,11 @@ body.dark .ar-work-cat,
     padding-left: 0;
     padding-right: 0;
 }
-
+@media only screen and (max-width:1920px) {
+    .section-w .wrappers {
+        max-width: 100% !important;
+    }
+}
 @media only screen and (min-width: 1200px) {
     .wrappers {
         max-width: 1274px;
