--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -2608,6 +2608,10 @@ ul.product-tags li a {
     #work-sction .cnt-rvl {
         padding-left: 59px;
     }
+    .site-navigation.fullscreen .menu.main-menu>li.menu-item{
+        font-size: 54px;
+        line-height: 64px;
+    }
 }
 
 @media screen and (max-width:767px) {
