--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1616,10 +1616,13 @@ section.horizontal .animation-wrap.to-left {
       width: 500px;
     }
   }
-
+  .ser-hero .top-h h1 {
+    font-size: 13em;
+}
   .get-in .flex-con .right::after {
     height: 367px;
   }
+  
 }
 
 @media screen and (max-width:1680px) {
