--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -1513,8 +1513,174 @@
     }
 }
 
-
-
+@media screen and (max-width:1920px) {
+    .about-us-section .small-h1 {
+        font-size: 3.5em;
+    }
+    .about-us-section .b-h1{
+        font-size: 5em;
+    }
+}
+@media screen and (max-width: 1680px) {
+    .c-hm-us_s2 {
+      padding-top: 14em;
+      padding-bottom: 14em;
+    }
+  .about-us-section .small-h1{
+    font-size: 3em;
+  }
+    .about-us-content {
+      margin-left: 111px;
+      margin-top: 23%;
+    }
+  
+    #about2 .big-h h1 {
+      font-size: 9.8em;
+    }
+  
+    .home-sec .about-us-content {
+      margin-left: 30px;
+      margin-top: 35%;
+    }
+  
+    .home-sec .about-us-content h1 {
+      font-size: 3.4em;
+    }
+  }
+  
+  @media screen and (max-width: 1440px) {
+    #about2 .big-h h1 {
+      font-size: 9.42em;
+    }
+  .about-us-section .small-h1{
+    font-size: 2.5em;
+  }
+    #about2 .about-p p {
+      font-size: 1em;
+    }
+  
+    .t-lead {
+      font-size: 2.4em;
+    }
+  
+    .about-us-section {
+      padding: 1% 0 30px;
+      margin-bottom: 110px;
+    }
+  
+    .about-us-content {
+      margin-left: 30px;
+      margin-top: 40%;
+    }
+  
+    .about-us-image {
+      margin-top: 5%;
+    }
+  
+    .c-hm-us_top {
+      padding-top: 4.6em;
+      height: 93vh;
+      padding-bottom: 0;
+    }
+  
+    .c-hm-us_s2 {
+      padding-top: 0em;
+      padding-bottom: 0em;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+    }
+  
+    .home-sec .about-us-content {
+      margin-left: 30px;
+      margin-top: 35%;
+    }
+  
+    .home-sec .about-us-content h1 {
+      font-size: 3em;
+    }
+  }
+  
+  @media screen and (max-width: 1366px) {
+    #about2 .big-h h1 {
+      font-size: 11.3em;
+    }
+  
+    #about2 .about-p p {
+      font-size: 1em;
+    }
+  
+    .about-us-section {
+      padding: 1% 0 30px;
+      margin-bottom: 110px;
+    }
+  
+    .about-us-content {
+      margin-left: 30px;
+      margin-top: 40%;
+    }
+  
+    .c-hm-us_top {
+      padding-top: 4.6em;
+      height: 93vh;
+      padding-bottom: 0;
+    }
+  
+    .c-hm-us_s2 {
+      padding-top: 0em;
+      padding-bottom: 0em;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+    }
+  
+    .container_hero_content .small_heading {
+      font-size: 1.2em;
+    }
+  }
+  
+  @media screen and (max-width: 1280px) {
+    #about2 .big-h h1 {
+      font-size: 8em;
+    }
+    .p-r-l{
+      padding: 0;
+    }
+  .about-us-section .small-h1{
+    font-size: 2.5em;
+  }
+    #about2 .about-p p {
+      font-size: 1.3em;
+    }
+  
+    .about-us-section {
+      padding: 1% 0 30px;
+      margin-bottom: 10px;
+    }
+  
+    .about-us-content {
+      margin-left: 30px;
+      margin-top: 40%;
+    }
+  
+    .c-hm-us_top {
+      padding-top: 0.6em;
+    }
+  
+    .c-hm-us_s2 {
+      padding-top: 7em;
+      padding-bottom: 8em;
+    }
+  
+    .home-sec .about-us-content {
+      margin-left: 30px;
+      margin-top: 35%;
+    }
+  
+    .home-sec .about-us-content h1 {
+      font-size: 3.2em;
+    }
+  }
 
 /*############### Single Project #############*/
 .h2-h {
@@ -3492,7 +3658,7 @@
 
     .c-hm-us_s2 {
         padding-top: 18em;
-        padding-bottom: 18em;
+        padding-bottom: 11em;
     }
 
     .t-lead {
