--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -996,7 +996,11 @@
 
 
 }
-
+@media screen and (max-width:1280px) {
+    .lets .flex-row h1{
+        font-size: 9em;
+    }
+}
 @media screen and (max-width:767px) {
     .mob {
         display: none;
