--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -470,14 +470,13 @@
     transform: translateY(-50%);
     max-width: 80vw;
     font-size: 54px;
-    font-weight: 700;
     letter-spacing: 0;
     color: #fff;
     line-height: 75px;
     padding-left: 5%;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    font-family: 'Ageo';
+    font-family: 'Ageo-light';
 }
 
 .carousel-showcase.dark .cas-titles .cs-title a,
@@ -2612,6 +2611,17 @@ ul.product-tags li a {
         font-size: 54px;
         line-height: 64px;
     }
+    .site-navigation.fullscreen ul ul li {
+        font-size: 31px;
+        line-height: 54px;
+ }
+ .site-navigation.fullscreen ul ul {
+     position: absolute;
+     top: 46px;
+ }
+ .cas-headline {
+    width: 70vw;
+}
 }
 
 @media screen and (max-width:767px) {
