--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -211,7 +211,7 @@
     text-decoration: none;
 
     span {
-      background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
+      background-image: linear-gradient(45deg, black, #000574);
       -webkit-text-fill-color: transparent;
       -webkit-background-clip: text;
       background-clip: text;
@@ -235,14 +235,14 @@
   .en-btn_send:hover {
     .arro {
       img {
-        transform: rotate(-45deg);
+        transform: rotate(45deg);
         transition: all 0.3s ease-in-out;
       }
     }
   }
 
   .en-btn_send:after {
-    background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
+    background-image: linear-gradient(45deg, black, #000574);
     background-size: 100% 500%;
     -webkit-animation: gradient 2s ease infinite;
     animation: gradient 2s ease infinite;
@@ -1600,7 +1600,7 @@ section.horizontal .animation-wrap.to-left {
   .en-btn_send:hover {
     .arro {
       img {
-        transform: rotate(-45deg);
+        transform: rotate(45deg);
         transition: all 0.3s ease-in-out;
       }
     }
@@ -1672,7 +1672,16 @@ section.horizontal .animation-wrap.to-left {
 }
 
 @media screen and (max-width:1280px) {
-
+  .services-s .image {
+    width: 35%;
+    /* height: 940px; */
+}
+.ser-hero .top-h h1 {
+  font-size: 8.5em;
+}
+.services-s .image img {
+  width: 100%;
+}
   .works__hero__line {
     font-size: 11em;
     line-height: 0.9;
@@ -1715,7 +1724,7 @@ section.horizontal .animation-wrap.to-left {
         text-decoration: none;
 
         span {
-          background-image: linear-gradient(49deg, #1e0253 0, #820060 30%, #c20027 58%, #1e0253 95%);
+          background-image: linear-gradient(45deg, black, #000574);
           -webkit-text-fill-color: transparent;
           -webkit-background-clip: text;
           background-clip: text;
@@ -1728,7 +1737,7 @@ section.horizontal .animation-wrap.to-left {
       }
 
       .en-btn_send:after {
-        background-image: linear-gradient(49deg, #1e0253 0, #820060 30%, #c20027 58%, #1e0253 95%);
+        background-image:linear-gradient(45deg, black, #000574);
         background-size: 100% 500%;
         -webkit-animation: gradient 2s ease infinite;
         animation: gradient 2s ease infinite;
