--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -5494,8 +5494,11 @@ header {
 .about-us-section h1 {
   width: 100%;
   color: #2b2b2b;
-  font-family: 'NeueHaasDisplay-me';
+  font-family: 'Ageo-light';
   font-size: 3.2em;
+}
+.home-sec .about-us-content h1 span b {
+  font-family: 'Ageo-Bold';
 }
 .about-us-section .small-h1 {
   font-size: 2.5em;
@@ -5993,6 +5996,9 @@ header {
   }
   .about-us-section .b-h1 {
     font-size: 5em;
+  }
+  .home-sec .about-us-content h1 {
+    font-size: 4em;
   }
 }
 @media screen and (max-width: 1680px) {
@@ -7887,7 +7893,7 @@ header {
     width: 1000px;
   }
   .home-sec .about-us-content h1 {
-    font-size: 5.6em;
+    font-size: 4em;
   }
 }
 @media screen and (max-width: 1680px) {
