--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -961,10 +961,12 @@
 .about-us-section h1 {
     width: 100%;
     color: #2b2b2b;
-    font-family: 'NeueHaasDisplay-me';
+    font-family: 'Ageo-light';
     font-size: 3.2em;
 }
-
+.home-sec .about-us-content h1 span b {
+    font-family: 'Ageo-Bold';
+}
 .about-us-section .small-h1 {
     font-size: 2.5em;
     line-height: 1.73;
@@ -1519,6 +1521,9 @@
     }
     .about-us-section .b-h1{
         font-size: 5em;
+    }
+    .home-sec .about-us-content h1 {
+        font-size: 4em;
     }
 }
 @media screen and (max-width: 1680px) {
@@ -3677,7 +3682,7 @@
             width: 1000px;
 
             h1 {
-                font-size: 5.6em;
+                font-size: 4em;
             }
         }
 
