--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -290,16 +290,16 @@
 
             .icon-circles {
                 position: absolute;
-                width: 2.5rem;
-                top: 48%;
-                left: 50%;
+                width: 1.5rem;
+                top: 35%;
+                left: 39%;
                 -webkit-transform: translate(-50%, -50%);
                 transform: translate(-50%, -50%);
                 opacity: 0.7;
                 /* -webkit-filter: invert(1); */
                 /* filter: invert(1); */
-                /* -webkit-animation: float 3s ease-in-out infinite; */
-                /* animation: float 3s ease-in-out infinite; */
+                -webkit-animation: float 3s ease-in-out infinite;
+                animation: float 3s ease-in-out infinite;
             }
 
 
