--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -3393,7 +3393,7 @@ header {
   }
   .container_hero_content .chapt-icon .icon-circles {
     position: absolute;
-    width: 2.5rem;
+    width: 1.5rem;
     top: 48%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
@@ -4352,7 +4352,7 @@ header {
   }
   .container_hero_content .chapt-icon .icon-circles {
     position: absolute;
-    width: 2.5rem;
+    width: 1.5rem;
     top: 48%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
@@ -5501,16 +5501,16 @@ header {
   font-family: 'Ageo-Bold';
 }
 .about-us-section .small-h1 {
-  font-size: 2.5em;
-  line-height: 1.73;
-  text-transform: uppercase;
-  letter-spacing: 4px;
+  font-size: 3.2em;
+  line-height: 1.63;
+  letter-spacing: 2px;
   margin-bottom: 0px;
-  font-family: 'NeueHaasDisplay-me';
+  font-family: 'Ageo';
+  text-transform: inherit;
 }
 .about-us-section .b-h1 {
   font-size: 4em;
-  line-height: 1.28;
+  line-height: 1.63;
   letter-spacing: 6px;
   text-transform: uppercase;
   margin-bottom: 0px;
@@ -5571,7 +5571,7 @@ header {
   text-transform: uppercase;
 }
 .about-page .container .flex .right-con p {
-  font-size: 1.1em;
+  font-size: 1.2em;
   letter-spacing: 1px;
 }
 .about-page .container .bdr-bottom {
@@ -5595,11 +5595,12 @@ header {
   overflow: visible;
 }
 .client-section .container .parh {
-  font-size: 1.1em;
+  font-size: 1.6em;
   letter-spacing: 1px;
   padding-right: 10%;
   line-height: 2;
   color: #fff;
+  font-family: 'Ageo-light';
   margin-bottom: 2%;
 }
 .client-section .grid-logo {
@@ -5929,7 +5930,7 @@ header {
   color: #EEE;
   text-transform: uppercase;
   font-weight: 600;
-  font-size: 10em;
+  font-size: 9em;
   padding: 32px 0;
   position: relative;
   overflow: hidden;
@@ -5992,10 +5993,10 @@ header {
 }
 @media screen and (max-width: 1920px) {
   .about-us-section .small-h1 {
-    font-size: 3.5em;
+    font-size: 3.2em;
   }
   .about-us-section .b-h1 {
-    font-size: 5em;
+    font-size: 3.2em;
   }
   .home-sec .about-us-content h1 {
     font-size: 4em;
@@ -6027,6 +6028,9 @@ header {
 @media screen and (max-width: 1440px) {
   #about2 .big-h h1 {
     font-size: 9.42em;
+  }
+  .about-us-section .b-h1 {
+    font-size: 3.2em;
   }
   .about-us-section .small-h1 {
     font-size: 2.5em;
@@ -8073,7 +8077,7 @@ header {
     width: 90%;
   }
   .client-section .container .parh {
-    font-size: 1.1em;
+    font-size: 1.6em;
     padding-right: 0;
     line-height: 1.6;
   }
