--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -968,18 +968,18 @@
     font-family: 'Ageo-Bold';
 }
 .about-us-section .small-h1 {
-    font-size: 2.5em;
-    line-height: 1.73;
-    text-transform: uppercase;
-    letter-spacing: 4px;
+    font-size: 3.2em;
+    line-height: 1.63;
+    letter-spacing: 2px;
     margin-bottom:
         0px;
-    font-family: 'NeueHaasDisplay-me';
+    font-family: 'Ageo';
+    text-transform: inherit;
 }
 
 .about-us-section .b-h1 {
     font-size: 4em;
-    line-height: 1.28;
+    line-height: 1.63;
     letter-spacing: 6px;
     text-transform: uppercase;
     margin-bottom:
@@ -1045,7 +1045,7 @@
                 }
 
                 p {
-                    font-size: 1.1em;
+                    font-size: 1.2em;
                     letter-spacing: 1px;
                 }
             }
@@ -1076,11 +1076,12 @@
         }
 
         .parh {
-            font-size: 1.1em;
+            font-size: 1.6em;
             letter-spacing: 1px;
             padding-right: 10%;
             line-height: 2;
             color: #fff;
+            font-family: 'Ageo-light';
             margin-bottom: 2%;
         }
     }
@@ -1434,7 +1435,7 @@
     color: #EEE;
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 10em;
+    font-size: 9em;
     padding: 32px 0;
     position: relative;
     overflow: hidden;
@@ -1517,10 +1518,10 @@
 
 @media screen and (max-width:1920px) {
     .about-us-section .small-h1 {
-        font-size: 3.5em;
+        font-size: 3.2em;
     }
     .about-us-section .b-h1{
-        font-size: 5em;
+        font-size: 3.2em;
     }
     .home-sec .about-us-content h1 {
         font-size: 4em;
@@ -1556,6 +1557,9 @@
   @media screen and (max-width: 1440px) {
     #about2 .big-h h1 {
       font-size: 9.42em;
+    }
+    .about-us-section .b-h1{
+        font-size: 3.2em;
     }
   .about-us-section .small-h1{
     font-size: 2.5em;
@@ -3939,7 +3943,7 @@
     }
 
     .client-section .container .parh {
-        font-size: 1.1em;
+        font-size: 1.6em;
         padding-right: 0;
         line-height: 1.6;
     }
